# file-merge-pdf

./: .gitignore  README.md  README_COMPRESSION.md  compress_pdf.py  main.py  pyproject.toml
